--- a/src/style.scss
+++ b/src/style.scss
@@ -130,9 +130,16 @@ $primaryColor: #4527a4;
             font-size: 14px;
           }
           .components-select-control__input.css-k4pu08.e1mv6sxx2{
+            border-radius: inherit;
+            border-radius: 1px;
             width: 280px;
-            background: #151212;
+            background-color: #1e1e1e;
             color: white;
+          }
+          .css-1y1fx19.e1mv6sxx1{
+            color: white;
+          }
+          .components-input-control__backdrop.css-ssb0uf.em5sgkm6{
             border: none;
           }
           .dropdown-container {
@@ -170,7 +177,7 @@ $primaryColor: #4527a4;
               top: 100%;
               left: 0;
               width: 100%;
-              background: rgb(0 0 0 / 75%);
+              background: rgb(0 0 0 / 91%);
               border-radius: 3px;
               max-height: 187px;
               overflow-y: auto;
@@ -345,7 +352,7 @@ $primaryColor: #4527a4;
       }
     }
   }
-
+  
   .icon {
     font-style: inherit;
   }
